# cccreate

./: .env.example  .gitignore  AGENTS.md  Dockerfile.webhook  README.md  docker-compose.webhook-mediaserver.yml  docker-compose.webhook-proxy.yml  docker-compose.webhook.yml  pyproject.toml  repair.lua  update.lua
docs/: AGENT_RUNTIME.md  AIRCRAFT_ACTUATORS.md  CONTROL_INPUT.md  INGAME_DEBUGGING.md  INVENTORY_MOVEMENT.md  PACKAGE_CRAFTER.md
skills/cc-tweaked-create-integration/: SKILL.md
skills/cc-tweaked-create-integration/agents/: openai.yaml
skills/cc-tweaked-create-integration/references/: addon-integrations.md  advanced-peripherals.md  cc-tweaked-apis.md  (+3 more)
skills/computercraft-agent-runtime/: SKILL.md
src/: ap_inventory_manager_test.lua  ccwrap.lua  cd  configure_webhook.lua  cp  craft_2x2_stack.lua  delete  dir  id  main.lua  mkdir  move  network_inventory_probe.lua  processing_router.lua  report_shell.lua  requester_test.lua  startup.lua  tom_gpu_terminal.lua  tom_keyboard_probe.lua  turtle_inventory_probe.lua  wrap_commands.lua
src/base/: ccwrap.lua  clean.lua  control_remote.lua  main.lua  path_check.lua  report.lua  report_shell.lua  reset_project.lua  startup.lua  wrap_commands.lua
src/config/: webhook.example.lua
src/lib/: diagnostics.lua  inventory_tools.lua  tom_cc_term_font.lua  tom_gpu_term.lua
tools/: cc_send_and_capture.ps1  cc_update_and_report.ps1  minecraft_screenshot.py  minecraft_send.py  read_latest_report.ps1  report_viewer.py  start_webhook_receiver.ps1  status_webhook_receiver.ps1  stop_webhook_receiver.ps1  webhook_receiver.py
(+45 files in other folders)
